# JWT-DJANGO

backend/: db.sqlite3  pyproject.toml
backend/Authentication/: admin.py  models.py  serializers.py  urls.py  views.py
backend/Authentication/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
